changing foldername to assets

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:url" content="https://rea-cloud.carrd.co">
     <meta property="twitter:card" content="summary_large_image">
     <link rel="canonical" href="https://rea-cloud.carrd.co/">
-    <link href="./REA Cloud_files/css2" rel="stylesheet" type="text/css">
+    <link href="./assets/css2" rel="stylesheet" type="text/css">
     <style>
         html,
         body,
@@ -1287,7 +1287,7 @@
     <div id="wrapper">
         <div id="main">
             <div class="inner">
-                <div id="image01" class="image"><span class="frame"><img src="./REA Cloud_files/image01.png"
+                <div id="image01" class="image"><span class="frame"><img src="./assets/image01.png"
                             alt=""></span></div>
                 <h1 id="title">Welcome to the Cloud</h1>
                 <p id="text01">Choose from the options below:</p>
