collapsed style into lines

--- a/index.html
+++ b/index.html
@@ -20,87 +20,7 @@
     <link rel="canonical" href="https://rea-cloud.carrd.co/">
     <link href="./assets/css2" rel="stylesheet" type="text/css">
     <style>
-        html,
-        body,
-        div,
-        span,
-        applet,
-        object,
-        iframe,
-        h1,
-        h2,
-        h3,
-        h4,
-        h5,
-        h6,
-        p,
-        blockquote,
-        pre,
-        a,
-        abbr,
-        acronym,
-        address,
-        big,
-        cite,
-        code,
-        del,
-        dfn,
-        em,
-        img,
-        ins,
-        kbd,
-        q,
-        s,
-        samp,
-        small,
-        strike,
-        strong,
-        sub,
-        sup,
-        tt,
-        var,
-        b,
-        u,
-        i,
-        center,
-        dl,
-        dt,
-        dd,
-        ol,
-        ul,
-        li,
-        fieldset,
-        form,
-        label,
-        legend,
-        table,
-        caption,
-        tbody,
-        tfoot,
-        thead,
-        tr,
-        th,
-        td,
-        article,
-        aside,
-        canvas,
-        details,
-        embed,
-        figure,
-        figcaption,
-        footer,
-        header,
-        hgroup,
-        menu,
-        nav,
-        output,
-        ruby,
-        section,
-        summary,
-        time,
-        mark,
-        audio,
-        video {
+        html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
             margin: 0;
             padding: 0;
             border: 0;
@@ -109,17 +29,7 @@
             vertical-align: baseline;
         }
 
-        article,
-        aside,
-        details,
-        figcaption,
-        figure,
-        footer,
-        header,
-        hgroup,
-        menu,
-        nav,
-        section {
+        article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
             display: block;
         }
 
@@ -127,20 +37,15 @@
             line-height: 1;
         }
 
-        ol,
-        ul {
+        ol, ul {
             list-style: none;
         }
 
-        blockquote,
-        q {
+        blockquote, q {
             quotes: none;
         }
 
-        blockquote:before,
-        blockquote:after,
-        q:before,
-        q:after {
+        blockquote:before, blockquote:after, q:before, q:after {
             content: '';
             content: none;
         }
@@ -164,19 +69,14 @@
             padding: 0
         }
 
-        input[type="text"],
-        input[type="email"],
-        select,
-        textarea {
+        input[type="text"], input[type="email"], select, textarea {
             -moz-appearance: none;
             -webkit-appearance: none;
             -ms-appearance: none;
             appearance: none
         }
 
-        *,
-        *:before,
-        *:after {
+        *, *:before, *:after {
             box-sizing: border-box;
         }
 
@@ -421,9 +321,7 @@
             transition-delay: 1.125s;
         }
 
-        body.is-instant #main,
-        body.is-instant #main>.inner>*,
-        body.is-instant #main>.inner>section>* {
+        body.is-instant #main, body.is-instant #main>.inner>*, body.is-instant #main>.inner>section>* {
             transition: none !important;
         }
 
@@ -480,46 +378,17 @@
             transition: none;
         }
 
-        h1,
-        h2,
-        h3,
-        p {
+        h1, h2, h3, p {
             direction: var(--site-language-direction);
             position: relative;
         }
 
-        h1 span.p,
-        h2 span.p,
-        h3 span.p,
-        p span.p {
+        h1 span.p, h2 span.p, h3 span.p, p span.p {
             display: block;
             position: relative;
         }
 
-        h1 span[style],
-        h2 span[style],
-        h3 span[style],
-        p span[style],
-        h1 strong,
-        h2 strong,
-        h3 strong,
-        p strong,
-        h1 a,
-        h2 a,
-        h3 a,
-        p a,
-        h1 code,
-        h2 code,
-        h3 code,
-        p code,
-        h1 mark,
-        h2 mark,
-        h3 mark,
-        p mark,
-        h1 spoiler-text,
-        h2 spoiler-text,
-        h3 spoiler-text,
-        p spoiler-text {
+        h1 span[style], h2 span[style], h3 span[style], p span[style], h1 strong, h2 strong, h3 strong, p strong, h1 a, h2 a, h3 a, p a, h1 code, h2 code, h3 code, p code, h1 mark, h2 mark, h3 mark, p mark, h1 spoiler-text, h2 spoiler-text, h3 spoiler-text, p spoiler-text {
             -webkit-text-fill-color: currentcolor;
         }
 
