adding https on monitor link

--- a/index.html
+++ b/index.html
@@ -1175,7 +1175,7 @@
                             </div>
                             <div>
                                 <ul id="icons02" class="icons">
-                                    <li><a class="n01" href="http://monitor.rea.lat/"
+                                    <li><a class="n01" href="https://monitor.rea.lat/"
                                             aria-label="Anchor"><svg>
                                                 <use xlink:href="#icon-adaab1c0ed8ab8e09132ba2b1384b609"></use>
                                             </svg><span class="label">Anchor</span></a></li>
